--- a/requirements.txt
+++ b/requirements.txt
@@ -5,6 +5,9 @@ python-multipart==0.0.6
 pinecone==7.3.0
 sentence-transformers==2.2.2
 groq==0.4.1
-langchain==0.1.0
+langchain==0.2.16
+langchain-core==0.2.38
+langchain-community==0.2.16
+langsmith==0.1.120
 numpy==1.24.3
 python-dotenv==1.0.0
