--- a/requirements.txt
+++ b/requirements.txt
@@ -4,7 +4,8 @@ pydantic==2.5.0
 python-multipart==0.0.6
 pinecone==7.3.0
 sentence-transformers==2.2.2
-openai==1.3.7
+openai==1.35.0
 numpy==1.24.3
 python-dotenv==1.0.0
 huggingface-hub==0.16.4
+httpx==0.24.1
