--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,13 @@
 fastapi==0.104.1
 uvicorn[standard]==0.24.0
 pydantic==2.5.0
-python-multipart==0.0.6
-pinecone==7.3.0
+pinecone-client==3.0.2
 sentence-transformers==2.2.2
-openai==1.35.0
+openai==1.3.7
 numpy==1.24.3
-python-dotenv==1.0.0
-huggingface-hub==0.16.4
-httpx==0.24.1
+python-multipart==0.0.6
+httpx==0.25.2
+torch==2.1.1+cpu --extra-index-url https://download.pytorch.org/whl/cpu
+transformers==4.35.2
+scikit-learn==1.3.2
+requests==2.31.0
