--- a/requirements.txt
+++ b/requirements.txt
@@ -1,13 +1,19 @@
 fastapi==0.104.1
 uvicorn[standard]==0.24.0
-pydantic==2.5.0
-pinecone-client==3.0.2
+pinecone-client==2.2.4
 sentence-transformers==2.2.2
 openai==1.3.7
+pydantic==2.5.0
 numpy==1.24.3
 python-multipart==0.0.6
 httpx==0.25.2
-torch==2.1.1+cpu --extra-index-url https://download.pytorch.org/whl/cpu
+
+# PyTorch CPU version - use standard PyPI version
+torch==2.1.1
+torchvision==0.16.1
+torchaudio==2.1.1
+
+# Additional dependencies for sentence-transformers
 transformers==4.35.2
 scikit-learn==1.3.2
-requests==2.31.0
+scipy==1.11.4
