--- a/render.yaml
+++ b/render.yaml
@@ -4,6 +4,7 @@ services:
     env: python
     plan: free
     buildCommand: |
+      pip install --upgrade pip &&
       pip install --no-cache-dir -r requirements.txt &&
       python -c "from sentence_transformers import SentenceTransformer; SentenceTransformer('sentence-transformers/all-MiniLM-L6-v2')"
     startCommand: python main.py
@@ -17,6 +18,8 @@ services:
         value: /opt/render/project/src/models
       - key: PYTHONUNBUFFERED
         value: "1"
+      - key: TORCH_HOME
+        value: /opt/render/project/src/models/torch
       - key: PINECONE_API_KEY
         sync: false
       - key: GROQ_API_KEY
@@ -26,4 +29,4 @@ services:
     disk:
       name: models-cache
       mountPath: /opt/render/project/src/models
-      sizeGB: 1
+      sizeGB: 2
