--- a/requirements.txt
+++ b/requirements.txt
@@ -1,22 +1,13 @@
-# Install PyTorch CPU version first
---find-links https://download.pytorch.org/whl/cpu/torch_stable.html
-
 fastapi==0.104.1
 uvicorn[standard]==0.24.0
-pinecone-client==2.2.4
-sentence-transformers==2.2.2
-openai==1.3.7
 pydantic==2.5.0
-numpy==1.24.3
 python-multipart==0.0.6
-httpx==0.25.2
-
-# PyTorch CPU versions from official wheel repository
-torch==2.1.1+cpu
-torchvision==0.16.1+cpu
-torchaudio==2.1.1+cpu
-
-# Additional dependencies
-transformers==4.35.2
-scikit-learn==1.3.2
-scipy==1.11.4
+pinecone==7.3.0
+sentence-transformers==2.7.0
+transformers==4.36.0
+huggingface_hub==0.19.4
+torch==2.1.0
+groq==0.4.1
+langchain==0.1.0
+numpy==1.24.3
+python-dotenv==1.0.0
