--- a/requirements.txt
+++ b/requirements.txt
@@ -4,7 +4,7 @@
 fastapi==0.104.1
 uvicorn[standard]==0.24.0
 pinecone-client==2.2.4
-sentence-transformers==2.2.2
+sentence-transformers==2.7.0
 openai==1.3.7
 pydantic==2.5.0
 numpy==1.24.3
@@ -16,7 +16,9 @@ torch==2.1.1+cpu
 torchvision==0.16.1+cpu
 torchaudio==2.1.1+cpu
 
-# Additional dependencies
-transformers==4.35.2
+# Additional dependencies - Updated versions for compatibility
+transformers==4.41.2
+huggingface_hub==0.23.4
 scikit-learn==1.3.2
 scipy==1.11.4
+tokenizers==0.19.1
