--- a/requirements.txt
+++ b/requirements.txt
@@ -3,7 +3,7 @@
 
 fastapi==0.104.1
 uvicorn[standard]==0.24.0
-pinecone-client==2.2.4
+pinecone-client==3.0.3
 sentence-transformers==2.7.0
 openai==1.3.7
 pydantic==2.5.0
@@ -22,3 +22,4 @@ huggingface_hub==0.23.4
 scikit-learn==1.3.2
 scipy==1.11.4
 tokenizers==0.19.1
+safetensors==0.4.2
